Add React.memo to VideoPlayer and FilmCard components

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "npm run eslint && npm run test.jest",
     "build": "webpack --mode production",
     "start": "webpack-dev-server",
-    "test.jest": "jest"
+    "test.jest": "jest",
+    "test.debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
